# ComfyUI-AF-Enhanced-HTML-Note

./: .gitattributes  .gitignore  AF_Enhanced_HTML_Note.py  CHANGELOG.md  README.md  __init__.py  node.py  package.json  pyproject.toml
helpers/ComfyUI-AF-Html-Note_Example-HTML/: ComfyUI-AF-Enhanced_HTML_Note-SDXL-WF-Help_A.html  ComfyUI-AF-Enhanced_HTML_Note_AllSyleExamples.html  ComfyUI-AF-Enhanced_HTML_Note_NodeDefaultContent.html  styles.css
helpers/PSD/: ComfyUI-AF-Enhanced_HTML_Note_Style-Examples-ALL_01.psd
web/: AF-Enhanced-HTML-Note.css  AF-Enhanced-HTML-Note.js  AF_Enhanced_HTML_Note.js  nodes.js
