[project]
name = "comfyui-af-enhanced-html-note"
description = "A ComfyUI Note node with HTML capabilities. Create notes, UI's and ReadMe's directly inside the workflow using rich HTML formatting."
version = "0.0.11"
license = {file = "LICENSE"}
dependencies = []

[project.urls]
Repository = "https://github.com/alFrame/ComfyUI-AF-Enhanced-HTML-Note"

[tool.comfy]
PublisherId = "alframe"
DisplayName = "ComfyUI AF - Enhanced HTML Note"
Icon = "https://fullframestudios.ch/ComfyUI-Icon/icon.png"